# shear_bias

./: .gitignore  CMakeLists.txt  README.md  README.rst  environment.yml  setup.py
latex/: notes.tex
notebooks/: basic.py  shear_bias_example.ipynb
notebooks/config/galsim/: csc_multishear.yaml  csc_psf.yaml
shear_bias/: __init__.py  data.py  errors.py  info.py  misc.py  plot.py  shapes.py  simulations.py
shear_bias/examples/: basic.py
src/: Makefile  get_shapes.cc
